fix spacing on userprofile

--- a/frontend/src/components/UserProfilePage/UserProfile.css
+++ b/frontend/src/components/UserProfilePage/UserProfile.css
@@ -1,9 +1,13 @@
 .body-container {
+    top: 80px;
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .spacing-top{
@@ -14,6 +18,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    top: 80px;
     min-width: 300px;
     width: 100%;
     height: 500px;
@@ -180,9 +185,9 @@
     z-index: 9;
 }
 
-.spacing{
+/* .spacing{
     height: 50px;
-}
+} */
 
 .profile_edit_textarea{
     height: 150px;
@@ -247,8 +252,9 @@
     display: flex;
     justify-content: center;
     flex-direction:inherit;
-    margin-left: -100px;
-    padding-left: -205px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 50px;
    
 }
 
@@ -258,7 +264,7 @@
     /* border: rgb(255, 253, 253) 1px solid; */
     border-right: 1px rgba(0, 0, 0, 0.552) solid;
     border-radius: 12px;
-    width: 1340px;
+    width: 100%;
     min-width: 1300px;
     
     height: 500px;
